# yew-word-search

./: .gitignore  Cargo.toml  LICENSE  README.md  index.css  index.html  package-lock.json  package.json  tailwind.config.js
src/: client.rs  generator.rs  lib.rs  main.rs
