[package]
name = "word_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
yew = { version = "0.20.0", features = ["csr"] }
gloo-console = "0.3.0"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
debug-assertions=false
